# netwatch

./: .dockerignore  .gitignore  AUTHORS  BENCHMARKS.md  CHANGELOG.md  CHANGELOG.md.bak  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Dockerfile  Dockerfile.bak  INSTALL.md  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TESTING.md  deny.toml  example.netwatch  install.sh
.githooks/: commit-msg  pre-commit
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  ci.yml  performance.yml  release.yml  security.yml
benches/: platform.rs  statistics.rs
examples/: demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_validation.rs  interface_validation.rs  stats_parsing.rs
scripts/: release.sh  setup-hooks.sh
security/: SECURE_DEVELOPMENT.md  SECURITY_GUIDE.md  sbom.json
src/: active_diagnostics.rs  cli.rs  config.rs  connections.rs  dashboard.rs  device.rs  display.rs  error.rs  input.rs  lib.rs  logger.rs  main.rs  network_intelligence.rs  processes.rs  safe_system.rs  security.rs  simple_overview.rs  stats.rs  system.rs  validation.rs
src/platform/: linux.rs  macos.rs  mod.rs
tests/: integration.rs  security_integration.rs
