[package]
name = "netwatch"
version = "0.1.5"
edition = "2021"
rust-version = "1.70"
authors = ["Netwatch Contributors"]
description = "A modern network traffic monitor for Unix systems, inspired by nload but written in Rust"
license = "MIT"
repository = "https://github.com/vietcgi/netwatch"
homepage = "https://github.com/vietcgi/netwatch"
documentation = "https://docs.rs/netwatch"
readme = "README.md"
keywords = ["network", "monitoring", "bandwidth", "traffic", "cli"]
categories = ["command-line-utilities", "network-programming", "visualization"]
exclude = ["debug.log", "target/", ".github/"]

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }

# Terminal UI with colors
ratatui = "0.29"
crossterm = "0.29"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Unix-specific
libc = "0.2"

# Configuration and data
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Utilities
dirs = "6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bin]]
name = "netwatch"
path = "src/main.rs"

[[bench]]
name = "statistics"
harness = false

[[bench]]
name = "platform"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"